--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <section class="chat-container" aria-label="Fallbeispiele (Click-UI)">
     <h1>medicIQ – Fallbeispiele</h1>
 
-    <!-- NEU: Setup-Zeile -->
+    <!-- Setup-Zeile (wird ausgeblendet bei Start) -->
     <div class="setup-row">
       <div class="setup-left">
         <span class="setup-label">Fachrichtung:</span>
@@ -67,7 +67,7 @@
       <div id="hintText">—</div>
     </div>
 
-    <!-- Tabs & Actions (NEU: Notarzt Button hier integriert) -->
+    <!-- Tabs & Actions -->
     <div class="tabs">
       <button class="tab active" data-tab="X">X – Exsanguination</button>
       <button class="tab" data-tab="A">A – Airway</button>
@@ -76,7 +76,7 @@
       <button class="tab" data-tab="D">D – Disability</button>
       <button class="tab" data-tab="E">E – Exposure</button>
       
-      <!-- Der Global-Button (sieht etwas anders aus) -->
+      <!-- Der Global-Button für Notarzt -->
       <button id="btnGlobalNA" style="border:1px solid #fecaca; background:#fef2f2; color:#b91c1c; padding:8px 10px; border-radius:10px; cursor:pointer; font-weight:bold; margin-left:6px;">
         📞 Notarzt
       </button>
