--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <title>medicIQ – Fallbeispiele (Click-UI)</title>
 
   <link rel="stylesheet" href="./style.css" />
-  <script src="./app.js"></script>
+  <script src="./app.js" defer></script>
 </head>
 <body>
 <main class="page">
