--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,7 @@
 <main class="page">
   <section class="chat-container" aria-label="Fallbeispiele (Click-UI)">
     
-    <h1 style="display:flex; align-items:center; justify-content:center; gap:10px;">
-        <img src="./logo.png" alt="medicIQ Logo" style="height: 50px;">
-        medicIQ – Fallbeispiele
-    </h1>
+    <h1>medicIQ – Fallbeispiele</h1>
 
     <div class="setup-container">
       
