--- a/public/index.html
+++ b/public/index.html
@@ -29,9 +29,8 @@
       <div class="setup-row control-row">
         <div class="setup-left">
           <label class="setup-label" for="roleSel">Rolle:</label>
-          <select id="roleSel" class="role-select">
+          <select id="roleSel" class="role-select" disabled>
             <option value="RS" selected>RS</option>
-            <option value="NotSan">NotSan</option>
           </select>
         </div>
         <div class="setup-right">
