--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     </div>
 
     <div class="setup-container">
-      <div class="setup-row mb-2">
+      <div id="specRow" class="setup-row mb-2">
         <div class="setup-left">
           <span class="setup-label">Fachrichtung:</span>
           <button class="spec-chip active" data-spec="internistisch">Internistisch</button>
