--- a/public/index.html
+++ b/public/index.html
@@ -144,8 +144,19 @@
 </div>
 <div id="modal4S" class="modal" style="display:none;">
   <div class="modal-head">4S-Schema</div>
-  <div class="modal-body form-grid"><div id="s4Info" class="small muted"></div><label><input type="checkbox" id="s1" /> Sicherheit</label><label><input type="checkbox" id="s2" /> Szene</label><label><input type="checkbox" id="s3" /> Sichtung</label><label><input type="checkbox" id="s4" /> Support</label></div>
-  <div class="modal-actions"><button id="s4Fetch" class="btn secondary">Infos abrufen</button><button id="s4Ok" class="btn">Dokumentieren</button><button id="s4Cancel" class="btn secondary">Abbrechen</button></div>
+  <div class="modal-body criteria-modal-body">
+    <div id="s4Info" class="small muted" style="margin-bottom: 10px; line-height: 1.4;"></div>
+    
+    <label><input type="checkbox" id="s1" /> Sicherheit</label>
+    <label><input type="checkbox" id="s2" /> Szene</label>
+    <label><input type="checkbox" id="s3" /> Sichtung</label>
+    <label><input type="checkbox" id="s4" /> Support</label>
+  </div>
+  <div class="modal-actions">
+    <button id="s4Fetch" class="btn secondary">Infos abrufen</button>
+    <button id="s4Ok" class="btn">Dokumentieren</button>
+    <button id="s4Cancel" class="btn secondary">Abbrechen</button>
+  </div>
 </div>
 
 <div id="modalNEXUS" class="modal" style="display:none;">
