--- a/public/index.html
+++ b/public/index.html
@@ -137,14 +137,14 @@
   <div class="modal-body befast-grid">
     <div id="befastInfo" class="small muted" style="margin-bottom: 10px;"></div>
     
-    <label><input type="checkbox" id="b_balance" /> <strong>B</strong> – Balance (Gleichgewicht)</label>
-    <label><input type="checkbox" id="e_eyes" /> <strong>E</strong> – Eyes (Blickwendung/Pupillen)</label>
-    <label><input type="checkbox" id="f_face" /> <strong>F</strong> – Face (Mundwinkel hängen)</label>
-    <label><input type="checkbox" id="a_arm" /> <strong>A</strong> – Arm (Absinken/Parese)</label>
-    <label><input type="checkbox" id="s_speech" /> <strong>S</strong> – Speech (Sprachstörung)</label>
+    <label><input type="checkbox" id="b_face" /> <span><strong>B</strong> – Balance (Gleichgewicht)</span></label>
+    <label><input type="checkbox" id="e_eyes" /> <span><strong>E</strong> – Eyes (Blickwendung)</span></label>
+    <label><input type="checkbox" id="f_face" /> <span><strong>F</strong> – Face (Mimik/Mundwinkel)</span></label>
+    <label><input type="checkbox" id="a_arm"  /> <span><strong>A</strong> – Arm (Halteversuch)</span></label>
+    <label><input type="checkbox" id="s_speech" /> <span><strong>S</strong> – Speech (Sprache)</span></label>
     
-    <div class="time-input-row">
-      <span>Last known well:</span>
+    <div class="time-row">
+      <strong>Last known well:</strong>
       <input type="time" id="t_time" />
     </div>
   </div>
