--- a/public/index.html
+++ b/public/index.html
@@ -240,9 +240,8 @@
     <label>I - Identifikation: <input id="s_ident" placeholder="Name, Alter..." /></label>
     <label>N - Notfallereignis: <textarea id="s_event" rows="2"></textarea></label>
     <label>N - Notfallanamnese: <textarea id="s_anam" rows="2"></textarea></label>
-    <label>H - Hauptsymptom/Prio: <input id="s_prio" /></label>
+    <label>H - Hauptsymptom: <input id="s_prio" /></label>
     <label>A - Aktueller Zustand: <textarea id="s_action" rows="2"></textarea></label>
-    <label>FT - Fortführung: <input id="s_next" /></label>
   </div>
   <div class="modal-actions">
     <button id="handoverOk" class="btn">Übergeben & Beenden</button>
