--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
             </select>
             
             <button id="startCase" class="btn primary">Neuen Fall starten</button>
-            <button id="btnFinishTop" class="btn danger hidden">Fall beenden (Übergabe)</button>
+            <button id="finishCase" class="btn danger hidden">Fall beenden (Übergabe)</button>
         </div>
         
         <div class="status-group">
