--- a/public/index.html
+++ b/public/index.html
@@ -260,4 +260,12 @@
     <button id="handoverCancel" class="btn secondary">Abbrechen</button>
   </div>
 </div>
+<div id="modalEKG" class="modal" style="display:none; max-width: 600px;">
+  <div class="modal-head">12-Kanal-EKG Monitor</div>
+  <div class="modal-body">
+    </div>
+  <div class="modal-actions">
+    <button id="ekgClose" class="btn secondary">Schließen</button>
+  </div>
+</div>
 </body>
