--- a/public/index.html
+++ b/public/index.html
@@ -260,27 +260,25 @@
     <button id="handoverCancel" class="btn secondary">Abbrechen</button>
   </div>
 </div>
-<div id="modalEKG" class="modal" style="display:none; max-width: 850px; width: 95%;">
+<div id="modalEKG" class="modal" style="display:none; max-width: 800px; width: 95%;">
   <div class="modal-head">12-Kanal-EKG Monitor</div>
   <div class="modal-body">
-    <div class="ekg-controls" style="display:flex; justify-content:space-between; margin-bottom:10px;">
-        <span id="ekgLeadName" style="color:var(--brand); font-weight:bold; font-size:1.2rem;">Ableitung II</span>
-        <select id="leadSelect" class="role-select" style="width:auto; padding:2px 10px;">
+    <div style="margin-bottom:10px; display:flex; justify-content:space-between; align-items:center;">
+        <label style="font-weight:bold;">Ableitung:</label>
+        <select id="leadSelect" class="role-select" style="width: auto;">
             <option value="I">I</option><option value="II" selected>II</option><option value="III">III</option>
             <option value="aVR">aVR</option><option value="aVL">aVL</option><option value="aVF">aVF</option>
             <option value="V1">V1</option><option value="V2">V2</option><option value="V3">V3</option>
             <option value="V4">V4</option><option value="V5">V5</option><option value="V6">V6</option>
         </select>
     </div>
-    
-    <div style="background:#000; border:2px solid #334155; border-radius:4px; overflow:hidden; position:relative;">
-        <canvas id="ekgCanvas" width="800" height="360" style="width:100%; height:auto; display:block;"></canvas>
-    </div>
-    
-    <div id="ekgStatusText" style="margin-top:12px; height:30px; line-height:30px; text-align:center; font-family:monospace; font-weight:bold; border-radius:4px; background:#111;"></div>
+    <div style="background:#000; border:2px solid #334155; border-radius:4px; overflow:hidden;">
+    <canvas id="ekgCanvas" width="800" height="360" style="width:100%; height:auto; display:block;"></canvas>
+</div>
+    <div id="ekgText" style="margin-top:10px; font-weight:bold; font-family:monospace; text-align:center; font-size:1.2rem;"></div>
   </div>
   <div class="modal-actions">
-    <button id="ekgClose" class="btn secondary">Monitor ausschalten</button>
+    <button id="ekgClose" class="btn secondary">Schließen</button>
   </div>
 </div>
 </body>
