--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <title>medicIQ – Fallbeispiele (Click-UI)</title>
 
   <link rel="stylesheet" href="./style.css" />
+  <script data-memberstack-app="app_cmfmhnj92003v0wsgay1bdpn0" src="https://static.memberstack.com/scripts/v1/memberstack.js" type="text/javascript"></script>
   <script src="./app.js" defer></script>
 </head>
 <body>
